force-app/main/default/objects/Integration_Logs_Junction__c/Integration_Logs_Junction__c.object-meta.xml
<CustomObject>
    <label>Integration Logs - Junction</label>
    <nameField>
        <displayFormat>ILJ-{YY}{MM}-{0}</displayFormat>
        <label>Integration Logs - Junction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Logs - Junction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>