force-app/main/default/objects/Integration_Logs_Junction__c/fields/Integration_Logs__c.field-meta.xml
<CustomField>
    <fullName>Integration_Logs__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Integration Logs</label>
    <referenceTo>Integration_Logs__c</referenceTo>
    <relationshipLabel>Integration Logs - Junction</relationshipLabel>
    <relationshipName>Integration_Logs_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>