force-app/main/default/objects/Integration_Logs_Junction__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to link Integration Logs to Invoices</description>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Integration Logs - Junction</relationshipLabel>
    <relationshipName>Integration_Logs_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>