force-app/main/default/objects/Integration_Logs_Junction__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Integration Logs - Junction</relationshipLabel>
    <relationshipName>Integration_Logs_Junction</relationshipName>
    <type>Lookup</type>
</CustomField>